Add triggers remove tech

--- a/index.html
+++ b/index.html
@@ -330,28 +330,28 @@
         <section class="features">
             <div class="feature">
                 <span class="feature-icon">&#x25C8;</span>
-                <h3>Context Spaces</h3>
-                <p>Isolated knowledge graphs for any domain. Memories, knowledge bases, profiles — each space has its own schema, ingestion rules, and retrieval config.</p>
+                <h3>Triggers</h3>
+                <p>Not just vector search. Triggers are semantic hooks — purpose-built phrases that connect natural language to the right knowledge. They strengthen with use and decay when irrelevant. Your graph learns what matters.</p>
             </div>
             <div class="feature">
                 <span class="feature-icon">&#x2B21;</span>
-                <h3>Graph Intelligence</h3>
-                <p>Community detection, link prediction, centrality scoring, and personalized PageRank. The graph does heavy lifting without LLM calls.</p>
+                <h3>Context Spaces</h3>
+                <p>Isolated knowledge graphs for any domain. Memories, knowledge bases, profiles — each space has its own schema, ingestion rules, and retrieval config. Composable across spaces in a single query.</p>
             </div>
             <div class="feature">
                 <span class="feature-icon">&#x26A1;</span>
                 <h3>Fast Hydration</h3>
-                <p>Six concurrent retrieval channels. Entity matching, vector search, graph expansion — all in under 200ms. No LLM in the hot path.</p>
+                <p>Multiple concurrent retrieval channels — trigger matching, vector search, graph expansion — all without a single LLM call. Context retrieval in milliseconds, not seconds.</p>
             </div>
             <div class="feature">
                 <span class="feature-icon">&#x2699;</span>
                 <h3>Fully Configurable</h3>
-                <p>Define new space types with YAML. Custom schemas, extraction prompts, scoring weights, lifecycle rules. No code changes needed.</p>
+                <p>Define new space types with YAML. Custom schemas, extraction prompts, scoring weights, lifecycle rules. No code changes needed. The platform adapts to your domain.</p>
             </div>
             <div class="feature">
                 <span class="feature-icon">&#x1F4E6;</span>
                 <h3>One Binary</h3>
-                <p>Single Go binary. Docker Compose for the full stack. Production-grade from day one. Scales to hundreds of thousands of users.</p>
+                <p>Single Go binary. Docker Compose to run. Production-grade from day one. Designed to scale to hundreds of thousands of users.</p>
             </div>
             <div class="feature">
                 <span class="feature-icon">&#x1F40D;</span>
@@ -392,7 +392,7 @@
         <div class="divider"></div>
 
         <section class="bottom">
-            <p>Built with Go. Powered by PostgreSQL, Neo4j, Qdrant, and Redis.</p>
+            <p>Built with Go. Designed for scale.</p>
         </section>
 
         <footer>
