--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
         <div class="divider"></div>
 
         <section class="bottom">
-            <p>Built with Go. Designed for scale.</p>
+            <p>Built with Go. Designed for scale.<br><a href="mailto:david@neuralgraph.app">david@neuralgraph.app</a></p>
         </section>
 
         <footer>
